# cs2-server-chooser

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: app.rs  data.rs  firewall.rs  main.rs  map.rs  sdr.rs  settings.rs
